# Open-Science-Maintenance

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
candidates/: candidates.example.yaml  ecosystem-survey.yaml  scientific-python.yaml
docs/: AI-POLICY-REPORT.md  contribution-workflow.md  work-types.md
docs/targets/: TEMPLATE.md
scripts/: ai_policy_report.py  baseline_tests.sh  new_target.py  run_checks.sh  setup_target.sh
src/osm_scanner/: __init__.py  cache.py  cli.py  config.py  gather.py  http.py  loader.py  models.py  report.py  scoring.py
src/osm_scanner/sources/: __init__.py  ai_policy.py  github_rest.py  pypistats.py
tests/: conftest.py  test_ai_policy.py  test_cache_http.py  test_integration.py  test_loader.py  test_report.py  test_scoring.py  test_sources.py
