[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-scanner"
version = "0.1.0"
description = "Scan and score scientific OSS repos as maintenance-contribution candidates"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Open-Science-Maintenance" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
osm-scan = "osm_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
